src/objects/LeanData__Routing_Deployment__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Graph_JSON_2__c</fullName>
        <label>Graph_JSON_2__c</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Graph_JSON_3__c</fullName>
        <label>Graph_JSON_3__c</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Graph_JSON_4__c</fullName>
        <label>Graph_JSON_4__c</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Graph_JSON_Hash__c</fullName>
        <label>Graph JSON Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Graph_JSON__c</fullName>
        <label>Graph_JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Graph_Version__c</fullName>
        <label>Graph Version</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Insert_Trigger_Conditions__c</fullName>
        <label>Insert_Trigger_Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LD Business Unit</label>
        <referenceTo>LeanData__LD_Business_Unit__c</referenceTo>
        <relationshipLabel>LD Business Unit</relationshipLabel>
        <relationshipName>Routing_Deployment_LD_Business_Unit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Matching_Trigger_Edges__c</fullName>
        <label>Matching_Trigger_Edges</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Metric_Translation_JSON_1__c</fullName>
        <label>Metric Translation JSON 1</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Metric_Translation_JSON__c</fullName>
        <label>Metric Translation JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Node_Name_To_Height_Map__c</fullName>
        <label>Node Name to Height Map</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_Type__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Parent_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Deployment</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>Parent Deployments</relationshipLabel>
        <relationshipName>Parent_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Parent_Graph__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Graph</label>
        <referenceTo>LeanData__Routing_Graph__c</referenceTo>
        <relationshipLabel>Parent Graphs</relationshipLabel>
        <relationshipName>Parent_Graphs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Presence_Map__c</fullName>
        <label>Node Presence Map</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Query_Fields__c</fullName>
        <label>Query Fields</label>
        <length>31000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Update_Trigger_Conditions__c</fullName>
        <label>Update_Trigger_Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Write_Fields__c</fullName>
        <label>Write Fields</label>
        <length>31000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Routing Deployment</label>
    <nameField>
        <label>Routing_Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>